--- a/src/style.css
+++ b/src/style.css
@@ -1,24 +1,41 @@
-html, body {
+* {
+    margin: 0;
+    padding: 0;
+}
+
+html, body, #main {
     width: 100%;
     height: 100%;
 }
 
 #main {
     background-color: #fcc;
+    display: flex;
+    flex-direction: column;
 }
 
 #main-top {
     background-color: #cfc;
+    flex: 0 0 50px;
+}
+
+#main-middle {
+    display: flex;
+    flex-direction: row;
+    flex: 1;
 }
 
 #main-left {
     background-color: #ccf;
+    flex: 0 0 400px;
 }
 
 #main-right {
     background-color: #ffc;
+    flex: 1;
 }
 
 #main-bottom {
     background-color: #fcf;
+    flex: 0 0 320px;
 }
