--- a/src/style.less
+++ b/src/style.less
@@ -1,22 +1,41 @@
+@color-ui-base: #282828;
+@color-ui-dark: #202020;
+@color-ui-border: #696969;
+@color-ui-border-dark: #333333;
+
+@color-text-primary: #efefef;
+@color-text-secondary: #ccc;
+
 * {
     margin: 0;
     padding: 0;
 }
 
+div {
+    box-sizing: border-box;
+}
+
+body {
+    color: @color-text-primary;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 html, body, #main {
     width: 100%;
     height: 100%;
+    background-color: @color-ui-base;
 }
 
 #main {
-    background-color: #fcc;
     display: flex;
     flex-direction: column;
 }
 
 #main-top {
-    background-color: #cfc;
     flex: 0 0 50px;
+    background-color: @color-ui-dark;
+    border-bottom: 1px solid @color-ui-border;
+    padding: 0 10px;
 }
 
 #main-middle {
@@ -26,16 +45,22 @@ html, body, #main {
 }
 
 #main-left {
-    background-color: #ccf;
     flex: 0 0 400px;
+    border-right: 1px solid @color-ui-border-dark;
+    padding: 12px;
 }
 
 #main-right {
-    background-color: #ffc;
     flex: 1;
+    border: 2px solid @color-ui-dark;
+    border-top-width: 3px;
+    border-bottom-width: 3px;
+    background: linear-gradient(#8b706a, #373242);
 }
 
 #main-bottom {
-    background-color: #fcf;
     flex: 0 0 320px;
+    background-color: @color-ui-dark;
+    border-top: 1px solid @color-ui-border;
+    padding: 12px;
 }
