Add Timeline div to page layout

--- a/src/style.less
+++ b/src/style.less
@@ -60,7 +60,13 @@ html, body, #main {
 
 #main-bottom {
     flex: 0 0 320px;
+    display: flex;
     background-color: @color-ui-dark;
     border-top: 1px solid @color-ui-border;
-    padding: 12px;
+    padding: 8px;
+}
+
+.timeline {
+    border: 1px solid @color-ui-border;
+    flex: 1;
 }
