--- a/src/components/common/Canvas/style.less
+++ b/src/components/common/Canvas/style.less
@@ -7,3 +7,11 @@
 .canvas-container > canvas {
     display: block;
 }
+
+.canvas-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
