Just position the playhead with CSS, who cares

--- a/src/components/Timeline/style.less
+++ b/src/components/Timeline/style.less
@@ -29,4 +29,12 @@
     top: 0;
     right: 0;
     bottom: 0;
+    pointer-events: none;
+}
+
+.timeline-playhead {
+    position: relative;
+    height: 100%;
+    width: 2px;
+    background-color: fade(#cc4444, 75%);
 }
