--- a/src/components/Timeline/style.less
+++ b/src/components/Timeline/style.less
@@ -38,3 +38,7 @@
     width: 2px;
     background-color: fade(#cc4444, 75%);
 }
+
+.timeline-playhead.scrubbing {
+    background-color: fade(lighten(#cc4444, 10%), 33%);
+}
