--- a/src/components/Timeline/style.less
+++ b/src/components/Timeline/style.less
@@ -37,7 +37,7 @@
 .playhead-container {
     position: absolute;
     left: 0;
-    top: 0;
+    top: 30px;
     right: 0;
     bottom: 0;
     pointer-events: none;
@@ -62,6 +62,21 @@
     height: 30px;
     padding: 5px;
     padding-bottom: 6px;
+}
+
+.range-bar-playhead-indicator-container {
+    position: absolute;
+    top: 3px;
+    left: 5px;
+    right: 5px;
+    bottom: 4px;
+}
+
+.range-bar-playhead-indicator {
+    position: relative;
+    background-color: fade(lighten(#cc4444, 10%), 33%);
+    width: 2px;
+    height: 100%;
 }
 
 .range-bar {
