Add a "ghost" to preview the position range bar will next shift to

--- a/src/components/Timeline/style.less
+++ b/src/components/Timeline/style.less
@@ -79,6 +79,28 @@
     height: 100%;
 }
 
+.range-bar-ghost-container {
+    position: absolute;
+    left: 5px;
+    top: 10px;
+    right: 5px;
+    bottom: 10px;
+}
+
+.range-bar-ghost {
+    position: relative;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 10%);
+}
+
+.range-bar-ghost:hover {
+    background-color: rgba(255, 255, 255, 30%);
+}
+
+.range-bar-ghost:active {
+    background-color: rgba(255, 255, 255, 40%);
+}
+
 .range-bar {
     position: relative;
     height: 100%;
