Adjust range bar ghost style

--- a/src/components/Timeline/style.less
+++ b/src/components/Timeline/style.less
@@ -82,23 +82,16 @@
 .range-bar-ghost-container {
     position: absolute;
     left: 5px;
-    top: 10px;
+    top: 14px;
     right: 5px;
-    bottom: 10px;
+    bottom: 14px;
 }
 
 .range-bar-ghost {
     position: relative;
     height: 100%;
-    background-color: rgba(255, 255, 255, 10%);
-}
-
-.range-bar-ghost:hover {
-    background-color: rgba(255, 255, 255, 30%);
-}
-
-.range-bar-ghost:active {
-    background-color: rgba(255, 255, 255, 40%);
+    background-color: fade(lighten(#cc4444, 10%), 33%);
+    border-left: 2px solid @color-ui-base;
 }
 
 .range-bar {
